--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -41,6 +41,8 @@
                     flex-direction: column;
                     align-items: center;
                     row-gap: 20px;
+                    list-style: none;
+                    padding: 0;
                     li{
                         a{
                             color: #B2D3F1;
@@ -129,12 +131,12 @@
 }
 
 .back-to-top{
-    transform: translateY(115px);
+    transform: translateY(calc(100% + 25px));
     opacity: 0;
-    width: 88px;
-    min-width: 88px;
-    height: 88px;
-    min-height: 88px;
+    width: 52px;
+    min-width: 52px;
+    height: 52px;
+    min-height: 52px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -150,10 +152,10 @@
         transform: translateY(0);
     }
     svg{
-        width: 30px;
-        min-width: 30px;
-        height: 17px;
-        min-width: 17px;
+        width: 18px;
+        min-width: 18px;
+        height: 10px;
+        min-width: 10px;
     }
 }
 
@@ -211,6 +213,20 @@
                     }
                 }
             }
+        }
+    }
+
+    .back-to-top{
+        transform: translateY(calc(100% + 25px));
+        width: 88px;
+        min-width: 88px;
+        height: 88px;
+        min-height: 88px;
+        svg{
+            width: 30px;
+            min-width: 30px;
+            height: 17px;
+            min-width: 17px;
         }
     }
 }
